added random js and got js working with browsersync

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
   width: 85%; }
 
 .bingo-square {
-  border: #f0f 1px solid;
+  border: blue 1px solid;
   display: inline-block;
   height: 140px;
   margin: 5px;
@@ -15,6 +15,10 @@
   width: 140px; }
   .bingo-square span {
     display: block;
+    padding: 5px;
     position: relative;
     top: 50%;
     transform: translateY(-50%); }
+
+.has-square {
+  background-color: #f0f; }
