--- a/css/style.css
+++ b/css/style.css
@@ -62,17 +62,18 @@ body {
   border-radius: 6px;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   color: #fff;
+  font-size: 11px;
+  font-family: Segoe UI;
+  left: 7px;
+  line-height: 12px;
   opacity: 0;
   padding: 5px 4px 8px 4px;
+  position: relative;
   text-align: center;
+  top: -20px;
   transition: .5s;
   visibility: hidden;
-  width: 100px;
-  top: -20px;
-  left: 7px;
-  position: relative;
-  font-size: 11px;
-  line-height: 12px; }
+  width: 100px; }
 
 .bingo-square:hover .tooltip {
   opacity: 1;
