--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 
 .bingo-board {
   margin: auto;
-  width: 524px; }
+  width: 540px; }
 
 .user-input {
   display: inline-block;
@@ -30,8 +30,8 @@ body {
   .user-input input[type="number"],
   .user-input input[type="text"] {
     background: transparent;
-    border-bottom: 1px solid #dbdbdb;
     border: 0;
+    border-bottom: 1px solid #dbdbdb;
     color: #dbdbdb;
     font: 12px 'Cinzel', sans-serif;
     outline: 0;
@@ -39,8 +39,10 @@ body {
     width: 120px; }
   .user-input input[type=number]::-webkit-inner-spin-button,
   .user-input input[type=number]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0; }
+    margin: 0;
+    -webkit-appearance: none; }
+  .user-input input[type=number] {
+    -moz-appearance: textfield; }
 
 .bingo-square {
   background-color: #5a5a64;
