--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,7 +27,7 @@ body {
 
 .bingo-board {
   margin: auto;
-  width: 524px;
+  width: 540px;
 }
 
 .user-input {
@@ -38,8 +38,8 @@ body {
   input[type="number"],
   input[type="text"] {
     background: transparent;
-    border-bottom: 1px solid #dbdbdb;
     border: 0;
+    border-bottom: 1px solid #dbdbdb;
     color: #dbdbdb;
     font: 12px 'Cinzel', sans-serif;
     outline: 0;
@@ -49,9 +49,14 @@ body {
 
   input[type=number]::-webkit-inner-spin-button,
   input[type=number]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
     margin: 0;
+    -webkit-appearance: none;
   }
+
+  input[type=number] {
+    -moz-appearance: textfield;
+  }
+
 }
 
 .bingo-square {
